--- a/_posts/others/2021-06-24-bandit.md
+++ b/_posts/others/2021-06-24-bandit.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "OverTheWire/Bandit"
-categories: overthewire
+categories: others overthewire
 permalink: /:categories/bandit
 ---
 
